DEV-1952: Remove pyrsistent from install deps. (#90)
DEV-1952: Remove pyrsistent from install deps.

Also:
- Upgrade tox.ini (allowlist_externals vs whitelist_externals and to only require dev-requirements.txt).
- Add --add-opens java.base/java.util=ALL-UNNAMED to Java build command for swagger_client.
- Add extras_require for dev deps to setup.py
- Add installation notes for Mac M2.
- Regen dev-reqs.txt (install + extra dev) from setup.py and reqs.txt as constraints.